@@ -52,7 +52,7 @@ type ConfigurationEditFlags struct {
 	ServiceAccountName         string
 	ImagePullSecrets           string
 	Annotations                []string
-	RunAsUser                  int64
+	User                       int64
 
 	// Preferences about how to do the action.
 	LockToDigest         bool
@@ -190,8 +190,8 @@ func (p *ConfigurationEditFlags) addSharedFlags(command *cobra.Command) {
 		"",
 		"Image pull secret to set. An empty argument (\"\") clears the pull secret. The referenced secret must exist in the service's namespace.")
 	p.markFlagMakesRevision("pull-secret")
-	command.Flags().Int64VarP(&p.RunAsUser, "run-as-user", "", 0, "The user ID to run the container (e.g., 1001).")
-	p.markFlagMakesRevision("run-as-user")
+	command.Flags().Int64VarP(&p.User, "user", "", 0, "The user ID to run the container (e.g., 1001).")
+	p.markFlagMakesRevision("user")
 }
 
 // AddUpdateFlags adds the flags specific to update.
@@ -399,8 +399,8 @@ func (p *ConfigurationEditFlags) Apply(
 		servinglib.UpdateImagePullSecrets(template, p.ImagePullSecrets)
 	}
 
-	if cmd.Flags().Changed("run-as-user") {
-		servinglib.UpdateRunAsUser(template, p.RunAsUser)
+	if cmd.Flags().Changed("user") {
+		servinglib.UpdateUser(template, p.User)
 	}
 
 	return nil
