@@ -52,8 +52,12 @@
 | Fix `--image` flag to only allow single occurence
 | https://github.com/knative/client/pull/647[#647]
 
+| 🧽
+| Add `--wait` and `--no-wait` to service delete operation. Change service delete to wait by default.   
+| https://github.com/knative/client/pull/682[#682]
+
 | 🎁
-| Add `--run-as-user` flag for specifying the user to run the container
+| Add `--user` flag for specifying the user id to run the container
 | https://github.com/knative/client/pull/679[#679]
 |===
 
